fixed toggle .high-contrast

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,7 +20,7 @@ body {
   color: var(--primary-text-color-dm);
 }
 
-.highcontrast {
+.high-contrast {
   background-color: var(--primary-bg-color-lm);
   color: var(--primary-text-color-lm);
 }
@@ -46,7 +46,7 @@ td,th {
   margin: 1.5rem;
 }
 
-.highcontrast #bdpahistory{
+.high-contrast #bdpahistory, .high-contrast #htmltags, .high-contrast #numconversion, .high-contrast .linkssection {
   background-color: var(--primary-bg-color-lm);
   color: var(--primary-text-color-lm);
 }
